trunk/Archive2/71/3661afbef41538/output
main.cpp:20:29: error: expected ',' or '...' before 'this'
 void sun_parse_data (sun_t* this, FILE* f){}
                             ^
